--- a/.github/workflows/prod_pipeline.yml
+++ b/.github/workflows/prod_pipeline.yml
@@ -5,4 +5,4 @@ jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
-      - run: python detect.py --weights runs\train\training\weights\best.pt --img 640 --conf 0.5 --source data/tests
+      - run: python ./detect.py --weights ./runs/train/training/weights/best.pt --img 640 --conf 0.5 --source ./data/tests
