--- a/.github/workflows/prod_pipeline.yml
+++ b/.github/workflows/prod_pipeline.yml
@@ -1,5 +1,7 @@
 name: PRODUCTION -CI/CD Pipeline
 
+run-name: PRODUCTION -CI/CD Pipeline
+
 on:
   push:
     branches: [ "main" ]
@@ -21,6 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ultralytics
+
           pip install flake8
           pip install -r requirements.txt
       - name: Testing
