--- a/.github/workflows/prod_pipeline.yml
+++ b/.github/workflows/prod_pipeline.yml
@@ -27,4 +27,23 @@ jobs:
           pip install flake8
           pip install -r requirements.txt
       - name: Testing
-        run: python detect.py --weights runs/train/training/weights/best.pt --img 640 --conf 0.5 --source data/tests
+        run: echo "Run !"
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v2
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ultralytics
+
+          pip install flake8
+          pip install -r requirements.txt
+      - name: Testing
+        run: echo "Run !"
