--- a/.github/workflows/prod_pipeline.yml
+++ b/.github/workflows/prod_pipeline.yml
@@ -28,14 +28,13 @@ jobs:
           pip install flake8
           pip install -r requirements.txt
       - name: Testing
-        run: echo "Run !"
-           # python detect.py --weights runs\train\training\weights\best.pt --img 640 --conf 0.5 --source data/tests
+        run: python detect.py --weights runs\train\training\weights\best.pt --img 640 --conf 0.5 --source data/tests
         
       - name: Build Docker Image
         run: |
-          # docker build -t walidguirat/Industrial_Object_Detection:0.1 .
-          # docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          # docker push walidguirat/Industrial_Object_Detection:0.1
+           docker build -t walidguirat/Industrial_Object_Detection:0.1 .
+           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+           docker push walidguirat/Industrial_Object_Detection:0.1
   deploy:
     runs-on: ubuntu-latest
 
@@ -44,26 +43,23 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Google Cloud SDK
-        # uses: google-github-actions/setup-gcloud@master
-       #  with:
-        #  service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-        #  project_id: vm-83-972@steel-index-259412.iam.gserviceaccount.com
-         # export_default_credentials: true
-        run:  echo "Run !"
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+          project_id: vm-83-972@steel-index-259412.iam.gserviceaccount.com
+          export_default_credentials: true
 
       - name: Authenticate with Google Cloud
-        run: # gcloud auth activate-service-account --key-file=${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-          echo "Run !"
+        run:  gcloud auth activate-service-account --key-file=${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+          
 
       - name: Pull Docker Image
         run: |
-          echo "Run !"
-         # docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-         # docker pull walidguirat/Industrial_Object_Detection:0.1
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker pull walidguirat/Industrial_Object_Detection:0.1
 
       - name: Run Docker Container on GCP VM
         run: |
-          echo "Run !"
-          # gcloud compute ssh your-gcp-vm-name --command "docker run -d walidguirat/Industrial_Object_Detection:0.1"
+          gcloud compute ssh your-gcp-vm-name --command "docker run -d walidguirat/Industrial_Object_Detection:0.1"
 
 
